# bg_web2pdf_etl

./: .gitignore  LICENSE  README.md  pyproject.toml
bg.web2pdf-elt/: main.py  pdf_etl.py  pdf_scraper.py
bg.web2pdf-elt_package/: main.py  pdf_etl.py  pdf_scraper.py
src/bg.web2pdf_etl/: cli.py  pdf_etl.py  pdf_scraper.py
src/bg_web2pdf_etl/: cli.py  pdf_etl.py  pdf_scraper.py
tests/: path_test.py  pathing.py  project_test.py
