[build-system]
requires = ["setuptools>=75.2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bg_web2pdf_etl"
version = "1.0.2"
authors = [
    { name="Barak Gardner", email = "gardnerbarak@gmail.com"},
]
description = "A tool that scrapes PDF's from the lpthw website and extracts data from them."
readme = "README.md"
requires-python =">=3.12.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "bs4",
    "pymupdf",
    "html5lib",
]

[project.urls]
Homepage = "https://github.com/BarakGardner/bg_web2pdf_etl"
Issues = "https://github.com/BarakGardner/bg_web2pdf_etl/issues"


[project.scripts]
start_etl = "bg_web2pdf_etl.cli:main"

